Skip to content

Apple Remote issue on VideoLAN player in Catalina

The Apple Remote does not work anymore with Catalina.

In Catalina, Apple Remote with original Apple IR receiver or compatible like SmartGUS, works with Apple applications:

  • Music
  • TV
  • Keynote
  • Quick Time Player

It does not worlk with numerous non-Apple applications:

  • VLC
  • Kodi
  • Libre Office & Open Office Impress …

However it works with Audirvana player.

Should be possible to update the Apple Remote support in VLC, with a Framework supported on Catalina.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information