macosx/Apple Remote: add support for macOS 10.15 (fixes #22976)

Manual back-port of b3c389bf